--- a/src/main/resources/style/style.scss
+++ b/src/main/resources/style/style.scss
@@ -38,6 +38,6 @@ code {
 }
 
 .jumbotron {
-  background-image: url("/images/header-machine-shop.jpg");
+  background-image: url("https://baconmockup.com/600/200");
   background-size: cover;
 }
